--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title><%= @team_name %></title>
+</head>
+<body>
+    <h1><%= @team_name %></h1>
+    <h2>Team Motto: <%= @team_motto %></h2>
 
-
-
+    <% @team_members.each.with_index do |hero, index| %>
+        <h2>Hero Name: <%= @hero_name[index] %></h2>
+        <p>
+        Hero Power: <%= @hero_power[index] %><br />
+        Hero Biography: <%= @hero_bio[index] %>
+        </p>
+    <% end %>
+</body>
+</html>
