--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Create a Team and Heroes!</title>
+</head>
+<body>
+    <h1>Create a Team and Heroes!</h1>
+    <form method="POST" action="/team">
+        <label>Team Name: </label>
+        <input type="text" id="name" name="team[name]" /><br />
 
+        <label>Team Motto: </label>
+        <input type="text" id="motto" name="team[motto]" /><br />
+        <br />
+        <br />
+
+        <h2>Hero 1</h2>
+        <label>Hero's Name: </label>
+        <input type="text" id="member1_name" name="team[members][][name]" /><br />
+
+        <label>Hero's Power: </label>
+        <input type="text" id="member1_power" name="team[members][][power]" /><br />
+
+        <label>Hero's Biography: </label>
+        <input type="text" id="member1_bio" name="team[members][][bio]" /><br />
+        <br />
+        <br />
+
+        <h2>Hero 2</h2>
+        <label>Hero's Name: </label>
+        <input type="text" id="member2_name" name="team[members][][name]" /><br />
+
+        <label>Hero's Power: </label>
+        <input type="text" id="member2_power" name="team[members][][power]" /><br />
+
+        <label>Hero's Biography: </label>
+        <input type="text" id="member2_bio" name="team[members][][bio]" /><br />
+        <br />
+        <br />
+
+        <h2>Hero 3</h2>
+        <label>Hero's Name: </label>
+        <input type="text" id="member3_name" name="team[members][][name]" /><br />
+
+        <label>Hero's Power: </label>
+        <input type="text" id="member3_power" name="team[members][][power]" /><br />
+
+        <label>Hero's Biography: </label>
+        <input type="text" id="member3_bio" name="team[members][][bio]" /><br />
+        <br />
+        <br />
+        <input type="submit" value="submit" name="submit">
+    </form>
+</body>
+</html>
